--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -110,7 +110,7 @@ jobs:
       - uses: actions/upload-artifact@master
         name: Upload Resume Artifacts
         with:
-          name: src
+          name: src_min
           path: |
             docs/
 
@@ -135,3 +135,31 @@ jobs:
         uses: Cyb3r-Jak3/html5validator-action@v7.2.0
         with:
           root: _site
+
+  add-markdown:
+    name: Commit and add Markdown Resume
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        with:
+          ref: ${{ github.ref }}
+
+      - uses: actions/download-artifact@master
+        name: Download Resume Artifacts
+        with:
+          name: readme
+          path: .
+
+      - name: Debug
+        run: |
+          ls -l
+          git status
+
+      - name: Commit Markdown
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: devexps
+          author_email: dev.experiences@gmail.com
+          message: 'Generated Markdown Resume'
+          add: 'README.md'
