--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -163,3 +163,31 @@ jobs:
           author_email: dev.experiences@gmail.com
           message: 'Generated Markdown Resume'
           add: 'README.md'
+
+  add-docs:
+    name: Commit and add Markdown Resume
+    runs-on: ubuntu-latest
+    needs: validate
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        with:
+          ref: ${{ github.ref }}
+
+      - uses: actions/download-artifact@master
+        name: Download Resume Artifacts
+        with:
+          name: src_min
+          path: .
+
+      - name: Debug
+        run: |
+          ls -l
+          git status
+
+      - name: Commit Docs
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: devexps
+          author_email: dev.experiences@gmail.com
+          message: 'Generated Docs Resume'
+          add: '.'
