--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -165,7 +165,7 @@ jobs:
           add: 'README.md'
 
   add-docs:
-    name: Commit and add Markdown Resume
+    name: Commit and add Docs Resume
     runs-on: ubuntu-latest
     needs: validate
     steps:
@@ -177,7 +177,7 @@ jobs:
         name: Download Resume Artifacts
         with:
           name: src_min
-          path: .
+          path: docs
 
       - name: Debug
         run: |
@@ -190,4 +190,4 @@ jobs:
           author_name: devexps
           author_email: dev.experiences@gmail.com
           message: 'Generated Docs Resume'
-          add: '.'
+          add: 'docs'
