--- a/resume.yaml
+++ b/resume.yaml
@@ -11,23 +11,23 @@
 name: Thang Ngo
 headline: Principal Software / Lead Mobile / Senior Backend
 description: Thang Ngo is an Principal Software Engineer in ZaloPay
-url: http://127.0.0.1:8080/resume
+url: https://devexps.com/resume
 repo:
   url: https://github.com/devexps/resume
 
 formats:
   # Formats and URLs
   pdf:
-    url: http://127.0.0.1:8080/resume/thangn.pdf
+    url: https://devexps.com/resume/thangn.pdf
     filename: resume.pdf
   word:
-    url: http://127.0.0.1:8080/resume/thangn.docx
+    url: https://devexps.com/resume/thangn.docx
     filename: resume.docx
   txt:
-    url: http://127.0.0.1:8080/resume/thangn.txt
-    narrow_url: http://127.0.0.1:8080/resume/resume-narrow.txt
+    url: https://devexps.com/resume/thangn.txt
+    narrow_url: https://devexps.com/resume/resume-narrow.txt
   json:
-    url: http://127.0.0.1:8080/resume/thangn.json
+    url: https://devexps.com/resume/thangn.json
 
 contact:
   email: dev.experiences@gmail.com
