--- a/resume.yaml
+++ b/resume.yaml
@@ -52,7 +52,7 @@ summary: >
 # -----------------------------------------------------------------------------
 experience:
   - title: Principal Software Engineer
-    org: ZaloPay, Zion Coporation
+    org: ZaloPay, Zion Corporation
     start: June 2020
     end: Present
     location: Z06, No.13, KCX Tan Thuan, Q7, HCM, Vietnam
@@ -102,7 +102,7 @@ experience:
       - Unit Testing
 
   - title: Associate Software Manager
-    org: ZaloPay, VNG Coporation
+    org: ZaloPay, VNG Corporation
     start: June 2018
     end: June 2020
     location: 182 Le Dai Hanh, HCM, Vietnam
@@ -146,7 +146,7 @@ experience:
       - gRPC
 
   - title: Lead Mobile Developer
-    org: TalkTV, VNG Coporation
+    org: TalkTV, VNG Corporation
     start: May 2015
     end: May 2018
     location: 182 Le Dai Hanh, HCM, Vietnam
@@ -183,7 +183,7 @@ experience:
       - iOS
 
   - title: Senior Backend Developer
-    org: TalkTV, VNG Coporation
+    org: TalkTV, VNG Corporation
     start: August 2012
     end: May 2015
     location: 182 Le Dai Hanh, HCM, Vietnam
@@ -223,7 +223,7 @@ experience:
       - WordPress
 
   - title: Senior Web Developer
-    org: ThienTan IT services Co, Ltd.
+    org: ThienTan IT Services Co, Ltd.
     start: July 2009
     end: August 2012
     location: 3 thang 2, HCM, Vietnam
